# ptp_ros1

./: CMakeLists.txt  README.md  package.xml  setup.cfg
checkpoint/social-stgcnn-eth/: args.pkl  constant_metrics.pkl  metrics.pkl  val_best.pth
checkpoint/social-stgcnn-eth-fpp/: args.pkl  constant_metrics.pkl  metrics.pkl  val_best.pth
checkpoint/social-stgcnn-eth-map/: args.pkl  constant_metrics.pkl  metrics.pkl  val_best.pth
checkpoint/social-stgcnn-hotel/: args.pkl  constant_metrics.pkl  metrics.pkl  val_best.pth
checkpoint/social-stgcnn-univ/: args.pkl  constant_metrics.pkl  metrics.pkl  val_best.pth
checkpoint/social-stgcnn-zara1/: args.pkl  constant_metrics.pkl  metrics.pkl  val_best.pth
checkpoint/social-stgcnn-zara2/: args.pkl  constant_metrics.pkl  metrics.pkl  val_best.pth
rviz/: ptp.rviz
scripts/: data_array.pkl  marker.py  metrics.py  model_depth_fc_fix.py  ptp_ros1_node.py  raw_data_dict.pkl  test.py  utils.py
