<?xml version="1.0"?>
<package format="2">
  <name>PTP_ros1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fmasaki2020@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <test_depend>rostest</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
