<?xml version="1.0"?>
<package format="2">
  <name>ptp_ros1</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fmasaki2020@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>rostest</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
